# genesis-scaffolding

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  output.txt  pyproject.toml  pyrightconfig.json
docs/: frontend_design_guideline.md
genesis-cli/: README.md  pyproject.toml
genesis-cli/src/genesis_cli/: __init__.py  main.py  utils.py
genesis-cli/tests/: example_test.py
genesis-core/: README.md  pyproject.toml
genesis-frontend/: README.md  next.config.ts  package.json  proxy.ts
genesis-server/: README.md  pyproject.toml
genesis-server/src/genesis_server/: __init__.py  chat_manager.py  database.py  dependencies.py  main.py  scheduler.py
genesis-server/src/genesis_server/auth/: security.py
genesis-server/src/genesis_server/models/: __init__.py  chat.py  user.py  workflow_job.py  workflow_schedule.py
genesis-server/src/genesis_server/routers/: agents.py  auth.py  chat.py  files.py  jobs.py  llm_config.py  memory.py  productivity.py  schedules.py  users.py  workflows.py
genesis-server/src/genesis_server/schemas/: chat.py  file_record.py  llm_config.py  productivity.py  user.py  workflow_job.py
genesis-server/src/genesis_server/utils/: workflow_job.py
genesis-server/tests/: example_test.py
genesis-tools/: README.md  pyproject.toml
genesis-tui/: README.md  pyproject.toml
myproject-cli/: README.md
myproject-core/: README.md
myproject-frontend/: README.md  package.json  pnpm-lock.yaml
myproject-server/: README.md
myproject-tools/: README.md
myproject-tui/: README.md
(+293 files in other folders)
