[project]
name = "genesis-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nguyentran0212", email = "gen.tran.1991@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "genesis-core",
    "genesis-server",
    "pathspec>=1.0.4",
    "prompt-toolkit>=3.0.52",
    "typer>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
genesis-core = { workspace = true }
genesis-server = { workspace = true }
