[project]
name = "genesis-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nguyentran0212", email = "gen.tran.1991@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.128.0",
    "genesis-core",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "sqlmodel>=0.0.33",
    "sse-starlette>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
genesis-core = { workspace = true }
